# roguepunk

./: .gitignore  Cargo.toml
.bin/: alacritty.yml  run.bat
notes/: Concepts.md  Interface approach.md  World War Person.md
src/: commons.rs  geometry.rs  main.rs  vehicle.rs
